--- a/requirements.txt
+++ b/requirements.txt
@@ -11,15 +11,19 @@ cryptography==41.0.1
 cssselect2==0.7.0
 cycler==0.11.0
 Django==4.1.7
+django-widget-tweaks==1.4.12
 fonttools==4.40.0
+gunicorn==20.1.0
 html5lib==1.1
 idna==3.4
 kiwisolver==1.4.4
 lxml==4.9.2
 matplotlib==3.7.1
 mysqlclient==2.1.1
+numpy==1.25.0
 oscrypto==1.3.0
 packaging==23.1
+Pillow==10.0.0
 pycparser==2.21
 pyHanko==0.19.0
 pyhanko-certvalidator==0.23.0
